tests/lean_before_refactoring/noncomp_theory.lean.expected.out
noncomp_theory.lean:4:0: error: definition 'f' is noncomputable, it depends on 'real.discrete_linear_ordered_field'
noncomputable definition g : ℝ → ℝ → ℝ :=
λ (a : ℝ), div (a + a)
definition r : ℕ → ℕ :=
λ (a : ℕ), a
